fix icon alignment

--- a/sass/global.sass
+++ b/sass/global.sass
@@ -70,6 +70,10 @@ a, a:link
   #toc>.ui.menu
     width: 100%
 
+  .collpased.icon
+    float: none
+    margin: 0
+
 #wrapper
   position: absolute
   padding-left: 20rem
